# turbofan_vpf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: overview.md
scripts/: run_analysis.py
src/turbofan_vpf/: __init__.py  analysis.py  config.py  models.py  plots.py
src/turbofan_vpf/aero/: __init__.py  blade.py  pitch.py
src/turbofan_vpf/cfd/: __init__.py  mesh.py
src/turbofan_vpf/cycle/: __init__.py  performance.py
src/turbofan_vpf/utils/: __init__.py
tests/: test_aero.py  test_cfd.py  test_cycle.py
turbofan_vpf/src/turbofan_vpf/: __init__.py
turbofan_vpf/src/turbofan_vpf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
turbofan_vpf/src/turbofan_vpf/aero/: __init__.py  airfoil_polars.py
turbofan_vpf/src/turbofan_vpf/analysis/: incidence_vs_polars.py  pitch_sweep_incidence.py
turbofan_vpf/src/turbofan_vpf/domain/: README.md  __init__.py  atmosphere.py  blade_kinematics.py  flow_state.py  incidence.py  operating_condition.py  operating_point.py  reference_frame.py
